# zagruz

./: .gitignore  Makefile  README.md  pyproject.toml  update_handler.py  zagruz.py
.github/workflows/: build.yml  package.yml  packages.yml  release.yml
package/: linux.spec  windows.spec
scripts/: generate_version.py  release.sh
src/: update_handler.py  zagruz.py
src/translations/: ru_RU.qm  ru_RU.ts
src/zagruz/: __init__.py  app_updater.py  base_downloader.py  download_worker.py  ffmpeg_installer.py  options.py  options_dialog.py  update_handler.py  update_worker.py  video_downloader.py  zagruz.py
src/zagruz/translations/: ru_RU.qm  ru_RU.ts
tests/: test_url_validation.py
