[project]
name = "zagruz"
version = "0.1.2"
description = "yt-dlp GUI Wrapper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.8.1",
    "pyqtdarktheme>=2.1.0",
    "yt-dlp>=2025.3.31",
]

[project.optional-dependencies]
package = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
zagruz = "zagruz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
reportImplicitStringConcatenation = false
