[project]
name = "zagruz"
version = "0.1.13"
description = "yt-dlp GUI Wrapper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.11.0",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
package = [
    "pyinstaller>=6.19.0",
]

[project.scripts]
zagruz = "zagruz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
reportImplicitStringConcatenation = false
